# bdix-server-monitor

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  discord-webhook.yml  flawfinder.yml  issue-slash-cmd.yml  release.yml
data/: server.json
docs/: API.md  ARCHITECTURE.md  BUILDING.md  CONFIGURATION.md  USAGE.md
include/: checker.h  colors.h  common.h  config.h  server.h  thread_pool.h  ui.h
src/: checker.c  config.c  main.c  server.c  thread_pool.c  ui.c
tests/: main_test.c  test_checker.c  test_common.h  test_config.c  test_server.c
